# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./slots";
 export * from "./vehicle_entries";
 export * from "./transactions";
+export * from "./parking_config";
